{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Touch",
            "id": "04b445b7-be43-41c4-b75d-a525a61184b4",
            "actions": [
                {
                    "name": "Touch1",
                    "type": "Button",
                    "id": "5bf29229-afe2-44f7-885e-18a5ef977d4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch2",
                    "type": "Button",
                    "id": "e3c241fb-ce9e-42d7-a2e6-0558310a7ce4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1Pos",
                    "type": "Value",
                    "id": "603f8f8b-f279-406a-8aac-537421e345b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch2Pos",
                    "type": "Value",
                    "id": "811eb478-09a5-4866-9286-e8d8bac99f76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "731cf089-2191-42db-b8c8-7c9ff56f8a72",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9b93691-93ef-4b77-a39f-8dbbb274e7d1",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c399a56-9ce0-4b65-a73d-1aa2aa3e1662",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1fc848e-1a2d-4933-898d-918fdd3d70fe",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch2Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}